# quantum-demo

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: .gitignore  pyproject.toml
backend/app/: database.py  main.py  models.py  qiskit_utils.py  routes.py  schemas.py
backend/tests/: test_api.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: CircuitCreator.tsx  CircuitViewer.tsx  QasmReference.tsx
frontend/src/test/: CircuitCreator.test.tsx  CircuitViewer.test.tsx
