[project]
name = "quantum-circuit-viewer"
version = "0.1.0"
description = "API for storing and visualizing OpenQASM quantum circuits"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "sqlalchemy>=2.0.25",
    "qiskit>=1.0.0",
    "matplotlib>=3.10.9",
    "pylatexenc>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
